--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
-title: Your Awesome Site
-email: your-email@domain.com
-author: Your Name
+url: http://www.hommel-net.de
+title: Hommel-Net Home
+email: mario@hommel-net.de
+author: Mario Hommel
 description: > # "Write an awesome description for your new site here. 
   You can edit this line in _config.yml. It will appear in your document 
   head meta (for Google search results) and in your feed.xml site 
@@ -25,8 +25,16 @@ permalink: pretty
 
 social:
   - title: twitter
-    url: https://twitter.com/SBootstrap
+    url: https://twitter.com/DerMario
+  - title: xing
+    url: https://www.xing.com/profile/Mario_Hommel
+  - title: instagram
+    url: http://instagram.com/mariohommel
+  - title: facebook
+    url: https://facebook.com/mario.hommel
+  - title: foursquare
+    url: https://de.foursquare.com/dermario
+  - title: google+
+    url: https://plus.google.com/u/0/104161064999906404032
   - title: github
-    url: https://github.com/IronSummitMedia/startbootstrap
-  - title: linkedin
-    url: 
+    url: https://github.com/mariohommel
