--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,8 @@ url: http://www.hommel-net.de
 title: Hommel-Net
 email: mario@hommel-net.de
 author: Mario Hommel
-description: > # "Write an awesome description for your new site here. 
-  You can edit this line in _config.yml. It will appear in your document 
-  head meta (for Google search results) and in your feed.xml site 
-  description."
-
+description: > # "Write an awesome description for your new site here.
+  Private Webseite von Mario Hommel. Admin, Linux-Fan und Blogger aus Bad Zwesten im schönen Nordhessen.
 # ----------------------- #
 #    Jekyll & Plugins     #
 # ----------------------- #
